--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --detectOpenHandles --forceExit",
+    "test:watch": "jest --watch --detectOpenHandles",
+    "test:coverage": "jest --coverage --detectOpenHandles --forceExit",
+    "test:verbose": "jest --verbose --detectOpenHandles --forceExit",
     "start": "node index.js"
   },
   "author": "",
@@ -21,9 +24,20 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "supertest": "^7.1.4"
+    "supertest": "^7.1.4",
+    "mongodb-memory-server": "^10.1.2"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": ["<rootDir>/tests/setup.js"],
+    "testTimeout": 30000,
+    "collectCoverageFrom": [
+      "controllers/**/*.js",
+      "middleware/**/*.js",
+      "models/**/*.js",
+      "routes/**/*.js"
+    ],
+    "coverageDirectory": "coverage",
+    "coverageReporters": ["text", "lcov", "html"]
   }
 }
